<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context="com.chazknox.mashgamefinal.MryActivity"
    tools:showIn="@layout/activity_mry"
    android:id="@+id/main_view1">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/mry_textview"
        android:id="@+id/mryTextView"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:textAppearance="@style/TextAppearance.AppCompat.Large" />

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:inputType="textPersonName"
        android:text="@string/name_1"
        android:ems="10"
        android:id="@+id/name1EditText"
        android:layout_marginTop="87dp"
        android:layout_below="@+id/mryTextView"
        />

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:inputType="textPersonName"
        android:text="@string/name_2"
        android:ems="10"
        android:id="@+id/name2EditText"
        android:layout_below="@+id/name1EditText"
        android:layout_alignParentStart="true" />

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:inputType="textPersonName"
        android:text="@string/name_3"
        android:ems="10"
        android:id="@+id/name3EditText"
        android:layout_below="@+id/name2EditText"
        android:layout_alignParentStart="true" />

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:inputType="textPersonName"
        android:text="@string/name_4"
        android:ems="10"
        android:id="@+id/name4EditText"
        android:layout_below="@+id/name3EditText"
        android:layout_alignParentStart="true" />

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:inputType="textPersonName"
        android:text="@string/name_5"
        android:ems="10"
        android:id="@+id/name5EditText"
        android:layout_below="@+id/name4EditText"
        android:layout_alignStart="@+id/submitButton" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/submit_button"
        android:id="@+id/submitButton"
        android:layout_marginTop="52dp"
        android:layout_below="@+id/name5EditText"
        android:onClick="submitButtonClick"/>

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/clear_button"
        android:id="@+id/clearButton"
        android:layout_alignTop="@+id/submitButton"
        android:layout_toEndOf="@+id/name5EditText" />

</RelativeLayout>
