<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context="com.chazknox.mashgamefinal.KidsActivity"
    tools:showIn="@layout/activity_kids">


    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/kid_textview"
        android:id="@+id/kidsTextView"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:textAppearance="@style/TextAppearance.AppCompat.Large" />

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:inputType="textPersonName"
        android:text="@string/kid_1"
        android:ems="10"
        android:id="@+id/kids1EditText"
        android:layout_marginTop="87dp"
        android:layout_below="@+id/kidsTextView"
        />

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:inputType="textPersonName"
        android:text="@string/kid_2"
        android:ems="10"
        android:id="@+id/kids2EditText"
        android:layout_below="@+id/kids1EditText"
        android:layout_alignParentStart="true" />

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:inputType="textPersonName"
        android:text="@string/kid_3"
        android:ems="10"
        android:id="@+id/kids3EditText"
        android:layout_below="@+id/kids2EditText"
        android:layout_alignParentStart="true" />

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:inputType="textPersonName"
        android:text="@string/kid_4"
        android:ems="10"
        android:id="@+id/kids4EditText"
        android:layout_below="@+id/kids3EditText"
        android:layout_alignParentStart="true" />

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:inputType="textPersonName"
        android:text="@string/kid_5"
        android:ems="10"
        android:id="@+id/kids5EditText"
        android:layout_below="@+id/kids4EditText"
        android:layout_alignStart="@+id/submitButton" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/submit_button"
        android:id="@+id/submitButton"
        android:layout_marginTop="52dp"
        android:layout_below="@+id/kids5EditText"
        android:onClick="kidsSubmitButtonClick"/>

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/clear_button"
        android:id="@+id/clearButton"
        android:layout_alignTop="@+id/submitButton"
        android:layout_toEndOf="@+id/kids5EditText"
        android:onClick="kidsCancelButtonClick"/>

</RelativeLayout>
