<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context="com.chazknox.mashgamefinal.MainActivity"
    tools:showIn="@layout/activity_main"
    android:id="@+id/main_view">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/mash"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:id="@+id/mashTextView"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="98dp" />

    <Button
        android:layout_width="150dp"
        android:layout_height="wrap_content"
        android:text="@string/start_button"
        android:id="@+id/startButton"
        android:onClick="startButtonClick"
        android:layout_below="@+id/mashTextView"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="61dp" />

    <Button

        android:layout_width="150dp"
        android:layout_height="wrap_content"
        android:text="@string/history_button"
        android:id="@+id/historyButton"
        android:layout_below="@+id/startButton"
        android:layout_centerHorizontal="true"
        android:onClick="historyButtonClick" />

    <Button
        android:layout_width="150dp"
        android:layout_height="wrap_content"
        android:text="@string/notify_button"
        android:id="@+id/notifyButton"
        android:layout_below="@+id/historyButton"
        android:layout_centerHorizontal="true"
        android:onClick="notifyClick"/>
</RelativeLayout>
