<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context="com.chazknox.mashgamefinal.ResultsActivity"
    tools:showIn="@layout/activity_results">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/main_textview"
        android:id="@+id/mainTextView"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:textStyle="bold" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/resultsTextView"
        android:background="#fffff818"
        android:layout_marginTop="97dp"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/results_textview"
        android:textStyle="bold|italic"
        android:layout_below="@+id/mainTextView"
        android:layout_alignStart="@+id/mainTextView" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/results_textview"
        android:id="@+id/resultsTextView1"
        android:background="#fffff818"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:textStyle="bold|italic"
        android:layout_below="@+id/resultsTextView"
        android:layout_alignLeft="@+id/mainTextView" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/results_textview"
        android:id="@+id/resultsTextView2"
        android:background="#fffff818"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:textStyle="bold|italic"
        android:layout_below="@+id/resultsTextView1"
        android:layout_alignLeft="@+id/mainTextView" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/results_textview"
        android:id="@+id/resultsTextView3"
        android:background="#fffff818"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:textStyle="bold|italic"
        android:layout_below="@+id/resultsTextView2"
        android:layout_alignLeft="@+id/mainTextView" />

    <Button
        android:layout_width="100dp"
        android:layout_height="wrap_content"
        android:text="@string/save_button_results"
        android:id="@+id/saveButton"
        android:onClick="saveButtonOnClick"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="128dp" />

    <Button
        android:layout_width="100dp"
        android:layout_height="wrap_content"
        android:text="@string/start_over_button_results"
        android:id="@+id/startOverButton"
        android:layout_alignBottom="@+id/saveButton"
        android:layout_alignParentStart="true"
        android:onClick="startButtonClick"/>

    <Button
        android:layout_width="100dp"
        android:layout_height="wrap_content"
        android:text="@string/history_button_results"
        android:id="@+id/historyButton"
        android:layout_alignBottom="@+id/saveButton"
        android:layout_alignParentEnd="true"
        android:onClick="historyButtonClick"/>

</RelativeLayout>
